# python_shared_container_terraform_pipeline

./: Jenkinsfile  Makefile  README.md  pyproject.toml
example-project/: .python-version  Dockerfile  Jenkinsfile  Makefile  README.md  batect.yml  pyproject.toml
example-project/example/: __init__.py  handler.py
example-project/terraform/: lambda.tf  outputs.tf  variables.tf
example-project/tests/integration/: __init__.py  test_lambda.py
example-project/tests/unit/: fixtures.py  test_handler.py
images/aws-lambda-python-dev-base/: Dockerfile  Makefile  README.md  pyproject.toml
images/aws-lambda-python-release-base/: Dockerfile  README.md
terraform/modules/aws-lambda-container/: iam.tf  logs.tf  main.tf  outputs.tf  security-group.tf  variables.tf
vars/: buildLambda.groovy  buildLambda.txt
