[tool.poetry]
name = "example"
version = "0.1.0"
description = ""
authors = ["Infrastructure Team"]
packages = [{include = "example"}]

[tool.poetry.dependencies]
python = "^3.9"
aws-lambda-powertools = "^1.29.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
boto3 = "^1.24.79"
boto3-stubs = {extras = ["lambda"], version = "^1.24.79"}
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
